Cambios en el env

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+//production
 POSTGRES_USER=adipweb_deploy_db_user
 PG_PORT=5432
 PG_PASSWORD=q0UQkYIF0sTtjeSdSq5oYdztsSuNj7OJ
@@ -5,3 +6,9 @@ PG_HOST=dpg-ck3mtfmru70s73f7chi0-a.frankfurt-postgres.render.com
 PG_DATABASE=adipweb_deploy_db
 DATABASE_URL=postgres://adipweb_deploy_db_user:q0UQkYIF0sTtjeSdSq5oYdztsSuNj7OJ@dpg-ck3mtfmru70s73f7chi0-a/adipweb_deploy_db
 POSTGRES_SSL=false  
+//desarollo
+# POSTGRES_USER=fl0user
+# PG_PORT=5432
+# PG_PASSWORD=DzqKnH9WjL7h
+# PG_HOST=ep-wandering-moon-99222123.us-east-2.aws.neon.tech
+# PG_DATABASE=adipdb
