--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
+
+//base de datos deploy/produccion
 POSTGRES_USER=adipweb_deploy_db_user
 PG_PORT=5432
 PG_PASSWORD=q0UQkYIF0sTtjeSdSq5oYdztsSuNj7OJ
 PG_HOST=dpg-ck3mtfmru70s73f7chi0-a.frankfurt-postgres.render.com
 PG_DATABASE=adipweb_deploy_db
 DATABASE_URL=postgres://adipweb_deploy_db_user:q0UQkYIF0sTtjeSdSq5oYdztsSuNj7OJ@dpg-ck3mtfmru70s73f7chi0-a/adipweb_deploy_db
-POSTGRES_SSL=false  
+POSTGRES_SSL=false
+
+//base de datos local
+
+# POSTGRES_USER=fl0user
+# PG_HOST=ep-wandering-moon-99222123.us-east-2.aws.neon.tech
+# PG_PORT=5432
+# PG_DATABASE=adipweb_deploy_db
+# PG_PASSWORD=DzqKnH9WjL7h
